Creating dark mode

--- a/Dark-Mode/index.html
+++ b/Dark-Mode/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>(WrkTb Aula 05)</title>
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
     <li>A extensão de domínio com mais usos é o ".com" com 148.7 milhões.</li>
   </ul>
 
-  <script src="./estiloDark.js"></script>
+  <script src="./js/estiloDark.js"></script>
 </body>
 
 </html>
