--- a/Task-List/index.html
+++ b/Task-List/index.html
@@ -18,10 +18,12 @@
         <input class="form-input" type="text">
         <button class="form-botao"> Nova Tarefa </button>
       </form>
-
+<!-- Código acima foi entregue pela DH  -->
       <ul class="lista">
         <li class="tarefa" id="tarefa1">
-          Criar Tela Cadastro 1
+          <input type="checkbox" name="task1-done" id="task1-done">
+          <label for="task1-done">Criar cadastro</label>
+          <button type="button" class="delete-task"></button>
         </li>
       </ul>
     </div>
