giving initial id to tabel

--- a/Task-List/index.html
+++ b/Task-List/index.html
@@ -22,7 +22,7 @@
       <ul class="lista">
         <li class="tarefa" id="tarefa1">
           <input type="checkbox" name="task1-done" id="task1-done">
-          <label for="task1-done">Criar cadastro</label>
+          <label for="task1-done" id="test">Criar cadastro</label>
           <button type="button" class="delete-task"></button>
         </li>
       </ul>
