added h3 for clearence before changing the css

--- a/Task-List/index.html
+++ b/Task-List/index.html
@@ -14,6 +14,8 @@
       <h1 class="titulo">
         Minha Lista de Tarefas
       </h1>
+      <h3>Botão rosa = Editar tarefa</h3>
+      <h3>Botão cinza escuro = deletar tarefa</h3>
       <form class="form" id="formulario" action="">
         <input class="form-input" type="text">
         <button class="form-botao"> Nova Tarefa </button>
