adjust sizes on mobile view

--- a/FlashCards/index.html
+++ b/FlashCards/index.html
@@ -14,7 +14,7 @@
         <h1>Criador de TbT's</h1>
         <nav>
             <div id="pai">
-                <button id="create-button">Salvar um momento</button>
+                <button id="create-button">Criar</button>
                 <button id="info-button">Info</button>
                 <div data-transition="false" aria-expanded="false" id="info">
                     <p>Criado por <strong>Jonathan Quintal Coutinho</strong> </p>
