--- a/FlashCards/index.html
+++ b/FlashCards/index.html
@@ -7,7 +7,8 @@
 
     <link rel="stylesheet" href="./style/styles.css">
 
-    <title>FlashCards</title>
+    <link rel="shorcut icon" href="https://cdn-icons-png.flaticon.com/512/5574/5574403.png">
+    <title>Criador de TbT's</title>
 </head>
 <body>
     <header>
