--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -13,12 +13,12 @@
     <div class="calculator">
         <div class="display">
             <p id="operation"></p>
-            <input type="text" id="currentValue" placeholder="0">    
+            <input type="text" id="currentValue" placeholder="0" autocomplete="off">    
         </div>
 
         <div class="buttons">
-            <button id="clear">C</button>
-            <button id="erase">Del</button>
+            <button class="symbol" id="clear">C</button>
+            <button class="symbol" id="erase">Del</button>
             <button class="operator">÷</button>
             <button class="numbers">7</button>
             <button class="numbers">8</button>
@@ -33,7 +33,8 @@
             <button class="numbers">3</button>
             <button class="operator">+</button>
             <button class="numbers">0</button>
-            <button id="equals">=</button>
+            <button class="numbers">.</button>
+            <button class="symbol" id="equals">=</button>
         </div>
     </div>
 
