--- a/Task-List/index.html
+++ b/Task-List/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=BioRhyme&amp;family=Space+Mono&amp;display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <title>Aula 05</title>
+  <title>Task-List</title>
 </head>
 <body>
   <div class="app">
