--- a/Task-List/index.html
+++ b/Task-List/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/styles.css">
 
+  <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/4472/4472515.png">
   <title>ToDo List</title>
 </head>
 
