added pending validations and styles

--- a/Task-List/index.html
+++ b/Task-List/index.html
@@ -19,8 +19,9 @@
       </div>
       <form aria-expanded="false" data-transition="false" class="form">
         <div>
-          <p aria-expanded="false" data-transition="false" class="fake">Descrição</p>
+          <p aria-expanded="false" data-transition="false" class="fake">Descrição</p>        
           <input class="form-input" type="text" id="new-task-input" autocomplete="off">
+          <p class="error-msg"></p>
         </div>
         <fieldset>
           <legend>Data limite</legend>
