added api for random tasks

--- a/Task-List/index.html
+++ b/Task-List/index.html
@@ -19,7 +19,11 @@
       </div>
       <form aria-expanded="false" data-transition="false" class="form">
         <div>
-          <p aria-expanded="false" data-transition="false" class="fake">Descrição</p>        
+          <div class="description">
+            <p aria-expanded="false" data-transition="false" class="input-label">Descrição</p> 
+            <button type="button" id="task-generator">random</button>
+          </div>
+                 
           <input class="form-input" type="text" id="new-task-input" autocomplete="off">
           <p class="error-msg"></p>
         </div>
