added random button style

--- a/Task-List/index.html
+++ b/Task-List/index.html
@@ -21,7 +21,7 @@
         <div>
           <div class="description">
             <p aria-expanded="false" data-transition="false" class="input-label">Descrição</p> 
-            <button type="button" id="task-generator">random</button>
+            <button type="button" id="task-generator"></button>
           </div>
                  
           <input class="form-input" type="text" id="new-task-input" autocomplete="off">
