adjusted header to position fixed

--- a/Task-List/index.html
+++ b/Task-List/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <main>
+  <header>
     <div class="main-card">
       <div class="card-header">
         <h1 class="titulo">Minha Lista</h1>
@@ -34,6 +34,8 @@
         <button class="form-botao">Criar</button>
       </form>
     </div>
+  </header>
+  <main>
     <ul class="list disabled">
     </ul>
   </main>
